--- a/Todo/Web.config
+++ b/Todo/Web.config
@@ -9,7 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-Todo-20120710181503;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-Todo-20120710181503.mdf" />
+    <add name="DefaultConnection" connectionString="Data Source=|DataDirectory|Todo.sdf" providerName="System.Data.SqlServerCe.4.0" />
   </connectionStrings>
   <appSettings>
     <add key="aspnet:UseTaskFriendlySynchronizationContext" value="true" />
@@ -76,6 +76,12 @@
     </assemblyBinding>
   </runtime>
   <entityFramework>
-    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
+    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlCeConnectionFactory, EntityFramework">
+      <parameters>
+        <parameter value="System.Data.SqlServerCe.4.0" />
+        <parameter value="" />
+        <parameter value="Data Source=|DataDirectory|Todo.sdf" />
+      </parameters>
+    </defaultConnectionFactory>
   </entityFramework>
 </configuration>
