Basic fetching from Web API (GET). No updates (PUSH, PUT, DELETE) yet.

--- a/Todo/Todo.csproj
+++ b/Todo/Todo.csproj
@@ -387,7 +387,7 @@
     <Content Include="Scripts\knockout-2.0.0.debug.js" />
     <Content Include="Scripts\knockout-2.0.0.js" />
     <Content Include="Scripts\modernizr-2.0.6-development-only.js" />
-    <Content Include="Scripts\todo.js" />
+    <Content Include="Scripts\app\controller.js" />
     <Content Include="Scripts\_references.js" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
